--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "typescript": "^3.9.10"
   },
   "dependencies": {
-    "nodemon": "^2.0.16",
-    "express": "^4.18.1"
+    "concurrently": "^7.1.0",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16"
   }
 }
