--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "typescript": "^3.9.10"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "concurrently": "^7.1.0",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "pg": "^8.7.3"
   }
 }
