--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/pg": "^8.6.5",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "2.6.2",
     "typescript": "^3.9.10"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "concurrently": "^7.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.16",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4"
   }
 }
